# topos

./: Cargo.toml  README.md  index.html
examples/audio/: Cargo.toml  main.rs
examples/audio/src/: cache.rs  main.rs
examples/audio/src/audio/: device_output.rs  mod.rs  state.rs
examples/audio/src/element/: mod.rs  root.rs  wave.rs
examples/audio/test/: root.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/basic/src/element/: main.rs  mod.rs  root.rs  test.rs  title_bar.rs  title_glyph.rs
examples/basic/test/: main.rs  root.rs  test.rs  title_bar.rs  title_glyph.rs
reference/: vger.wgsl
src/: accessibility.rs  app.rs  atlas.rs  box.wgsl  color.rs  debug.rs  graphics.rs  hash.rs  history.rs  lib.rs  main.rs  math.rs  mesh.rs  mesh.wgsl  num.rs  paint.rs  scene.rs  shape.rs  surface.rs  text.rs  text.wgsl  texture.rs  time.rs  util.rs
src/element/: boundary.rs  element.rs  event.rs  mod.rs  response.rs  test.rs  text.rs  text_edit.rs  transition.rs
src/input/: clipboard.rs  focus.rs  input.rs  input_state.rs  mod.rs  output.rs  tao.rs  touch_state.rs  winit.rs
src/lib/: mod.rs  response.rs
src/refbox/: internals.rs  mod.rs
src/scene/: ctx.rs  framepacer.rs  input.rs  layout.rs  mod.rs  paint.rs  scene.rs  update.rs
src/test/: main.rs  mod.rs  root.rs  test.rs  text.rs  title_bar.rs  title_glyph.rs
src/util/: angle.rs  euclid.rs  guard.rs  layout.rs  length.rs  markers.rs  mod.rs  point.rs  rect.rs  sides.rs  size.rs  svg.rs  taffy.rs  template.rs  text.rs  traits.rs  vec.rs
src/util/math/: angle.rs  length.rs  mod.rs  point.rs  rect.rs  sides.rs  size.rs  transformation.rs  vector.rs
