[package]
name = "topos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.11.0"
accesskit_winit = "0.14.0"
bitflags = "2.3.1"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cosmic-text = "0.9.0"
custom_derive = "0.1.7"
drain_filter_polyfill = "0.1.3"
enum-as-inner = "0.6.0"
enum_derive = "0.1.7"
env_logger = "0.10.0"
etagere = "0.2.7"
euclid = "0.22.9"
float_next_after = "1.0.0"
futures = "0.3.28"
half = { version = "2.3.1", features = [ "bytemuck" ] }
handlebars = "4.3.7"
instant = "0.1"
itertools = "0.10.5"
keyframe = "1.1.1"
log = "0.4.18"
lyon = { version = "1.0.1", features = [ "extra" ] }
macro-attr = "0.2.0"
num-traits = "0.2.15"
ordered-float = "3.7.0"
ordered_hash_map = "0.2.0"
palette = "0.7.2"
paste = "1.0.12"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.5.2"
rayon = "1.7.0"
refbox = "0.3.0"
ringbuffer = "0.14.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.183", features = [ "derive" ] }
shrinkwraprs = "0.3.0"
svg = "0.13.1"
swash = "0.1.8"
taffy = "0.3.11"
webbrowser = "0.8.10"
wgpu = "0.16.0"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = "0.3.64"
wasm-logger = "0.2.0"
uuid = { version="1.3.3", features = ["v4", "js"] }

# [target.'cfg(target_arch = "wasm32")'.build]
# rustflags = ["--cfg", "web_sys_unstable_apis"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2.0"
uuid = { version="1.3.3", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.4.1"
icrate ={ version="0.0.4", features=["Foundation_all", "AppKit_all"] }

[patch.crates-io]
taffy = { git = "https://github.com/mxsdev/taffy", branch = "update-parents-on-remove" }
