[package]
name = "topos"
version = "0.1.0"
edition = "2021"

[lib]

[workspace]
members = [".", "examples/*"]
default-members = ["."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.19.0"
accesskit_winit = "0.27.0"
ahash = "0.8.12"
bytemuck = { version = "1.23.0", features = ["derive"] }
cosmic-text = "0.14.2"
custom_derive = "0.1.7"
derive_more = { version = "2.0.1", features = ["into", "from"] }
drain_filter_polyfill = "0.1.3"
enum_derive = "0.1.7"
etagere = "0.2.15"
handlebars = "6.3.2"
instant = "0.1.13"
itertools = "0.14.0"
keyframe = "1.1.1"
log = "0.4.27"
lyon = { version = "1.0.1", features = ["extra"] }
num-traits = "0.2.19"
ordered-float = "5.0.0"
palette = "0.7.6"
paste = "1.0.15"
pollster = "0.4.0"
rayon = "1.10.0"
refbox = "0.4.0"
ringbuffer = "0.15.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.183", features = ["derive"] }
shrinkwraprs = "0.3.0"
svg = "0.18.0"
swash = "0.2.5"
taffy = "0.8.1"
webbrowser = "1.0.4"
wgpu = "25.0.2"
winit = "0.30.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = "0.3.64"
wasm-logger = "0.2.0"
uuid = { version = "1.3.3", features = ["v4", "js"] }

# [target.'cfg(target_arch = "wasm32")'.build]
# rustflags = ["--cfg", "web_sys_unstable_apis"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2.0"
uuid = { version = "1.3.3", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.4.1"
icrate = { version = "0.0.4", features = [
    "Foundation_all",
    "AppKit_all",
    "CoreAnimation_all",
    "Metal_all",
] }

[patch.crates-io]
taffy = { git = "https://github.com/mxsdev/taffy", branch = "update-parents-on-remove" }
