[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
icrate = "0.0.4"
log = "0.4.20"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
# Enable default features for tests and examples
topos = { path = "../../" }
winit = "0.28.6"
ffmpeg-next = "6.0.0"
get-size ={ version = "0.1.4", features = ["derive"] }
rayon = "1.7.0"
rand = "0.8.5"
ringbuf = "0.3.3"
cpal = "0.15.2"
bytemuck = "1.14.0"
