[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
# Enable default features for tests and examples
topos = { path = "../../" }
icrate = { version = "0.0.4", features = ["Foundation_all", "AppKit_all"] }
